--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link href='https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@100;300&display=swap'>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Todo Application | Kurt </title>
   </head>
   <body>
     <noscript>
