--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@100;300&display=swap"><title>Todo Application | Kurt</title><script defer="defer" src="/js/chunk-vendors.9310a2ea.js"></script><script defer="defer" src="/js/app.0d4053d5.js"></script><link href="/css/app.d642b90a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but todo-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><div class="modals"></div></body></html>
+<!doctype html>
+<html lang="">
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@100;300&display=swap">
+  <title>Todo Application | Kurt</title>
+  <script defer="defer" src="/js/chunk-vendors.9310a2ea.js">
+  </script><script defer="defer" src="/js/app.0d4053d5.js">
+
+  </script><link href="/css/app.d642b90a.css" rel="stylesheet">
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but todo-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <div class="modals"></div>
+  </body>
+</html> 
